--- a/blue-green-app/service.yml
+++ b/blue-green-app/service.yml
@@ -3,10 +3,12 @@ kind: Service
 metadata:
   name: rollout-bluegreen-active
 spec:
-  type: NodePort
+  #type: NodePort
+  type: ClusterIP
   selector:
     app: trivial-go-web-app
   ports:
-      - nodePort: 31000
-        protocol: TCP
-        port: 8080
+    #- nodePort: 32000
+    - name: http-service
+      protocol: TCP
+      port: 8081
