--- a/blue-green-app/service.yml
+++ b/blue-green-app/service.yml
@@ -3,12 +3,11 @@ kind: Service
 metadata:
   name: rollout-bluegreen-active
 spec:
-  #type: NodePort
-  type: ClusterIP
+  type: LoadBalancer     # NodePort, ClusterIP, LoadBalancer
   selector:
     app: trivial-go-web-app
   ports:
     #- nodePort: 32000
     - name: http-service
       protocol: TCP
-      port: 8081
+      port: 80
